--- a/style.css
+++ b/style.css
@@ -202,6 +202,21 @@ marquee{
     padding-bottom: 10px;
 }
 
+.the-end h3{
+    color:rgb(248, 13, 103);
+    font-weight: 800;
+}
+
+.the-end h4{
+    color: #f00696;
+    font-weight: 500;
+}
+
+.the-end h5{
+    color: #f00696;
+    font-weight: 400;
+}
+
 
 .bootrap{
     margin-right: 100px;
