--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ marquee{
     margin-top: 50px;
 }
 
+
 .icon-text h1{
     text-align: center;
     font-size: 50px;
@@ -163,7 +164,9 @@ marquee{
 
 }
 
-
+.contact-text{
+    width: 100%;
+}
 .contact-text h1{
     text-align: center;
     font-size: 50px;
@@ -201,6 +204,7 @@ marquee{
     color: black;
     padding-top: 20px;
     padding-bottom: 10px;
+    width: 100%;
 }
 
 .the-end h3{
@@ -382,8 +386,15 @@ marquee{
 
 /* Mobile: width <740px */
 @media only screen and (max-width: 46.1875em){
+    *{
+        margin: 0 0;
+        padding: 0;
+    }
+
+    body{
+    }
     .navbar h1{
-        margin: 40px 50px;
+        margin: 40px 60px;
         font-family: 'Montserrat', sans-serif;
         font-weight: bolder;
         font-size: 40px;
@@ -393,28 +404,26 @@ marquee{
     
     .bootrap{
         display: flex;   
-        margin-left: 3px;
+        margin-left: -10px;
         margin-top: 20px;
     }
 
     .btn-primary{
         margin-right: 0;
-        width: 120px;
-        margin-left: 20px;
+        width: 100px;
+        margin-left: 30px;
     }
 
     .btn-danger{
-        padding: 10px 6px;
-        margin-left: 13px;
-        width: 130px;
-        height: 45px;
-        margin-right: 10px;
+        margin-right: 0;
+        width: 100px;
+        margin-left: 20px;
     }
     .btn-success{
         margin-right: 0;
-        margin-left: 10px;
-        font-size: 20px;
-        width: 70px;
+        width: 100px;
+        margin-left: 20px;
+        padding: 20px 0;
     }
 
     .btn-warning{
@@ -472,7 +481,7 @@ marquee{
         color: white;
         margin: auto; 
         margin-top: 40px;
-        width: 200px;
+        width: 230px;
         padding: 10px 0;
         font-family: 'Montserrat', sans-serif;
         font-weight: bolder;
@@ -592,8 +601,11 @@ marquee{
         display: none;
     }    
 
-
+    .the-end{
+        width: 100%;
+    }
     .the-end h4{
+        width: 100%;
         font-size: 20px;
     }
 }
