--- a/style.css
+++ b/style.css
@@ -11,16 +11,19 @@ body{
     background-image: linear-gradient(to bottom, #FFFF00, #FF0000)
 }
 
+
+
 marquee{
     background-color: #45f3ff;
-    margin: -5px;
+    margin-top: -10px;
     padding: 20px 0;
     font-weight: bolder;
     font-size: 25px;
     color: #fd0c71;
 }
 
-.navbar{
+.container{
+    width: 100%;
     background-color: #FFFF00;
     padding: 0;
 }
@@ -36,10 +39,9 @@ marquee{
     width: 100%;
 }
 
-
-.container .about h1{
+.about h1{
     color: white;
-    margin: 40px 450px;
+    margin: 40px 600px;
     padding: 10px 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
@@ -49,8 +51,7 @@ marquee{
     border-radius: 20px;
     background-color: #0d6efd;
 }
-
-.container .about h2{
+.about h2{
     color: white;
     margin: 40px 40px;
     font-family: 'Montserrat', sans-serif;
@@ -61,7 +62,7 @@ marquee{
     text-transform: uppercase;
 }
 
-.container .about h2 ::before{
+.about h2 ::before{
     content: attr(data-text);
     position: absolute;
     top: 0;
@@ -97,7 +98,7 @@ marquee{
     text-align: center;
     font-size: 50px;
     color: white;
-    margin: 100px 450px 0px 450px; 
+    margin: 100px 580px 0px 580px; 
     padding: 10px 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
@@ -152,7 +153,7 @@ marquee{
     text-align: center;
     font-size: 50px;
     color: white;
-    margin: 100px 500px 70px 500px; 
+    margin: 100px 630px 70px 630px; 
     padding: 10px 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
@@ -387,12 +388,15 @@ marquee{
 /* Mobile: width <740px */
 @media only screen and (max-width: 46.1875em){
     *{
-        margin: 0 0;
+        margin: 0;
         padding: 0;
     }
 
-    body{
+    .script{
+        margin: 0;
+        padding: 0;
     }
+    
     .navbar h1{
         margin: 40px 60px;
         font-family: 'Montserrat', sans-serif;
@@ -432,7 +436,7 @@ marquee{
 
 
 
-    .container .about h1{
+    .about h1{
         color: white;
         font-family: 'Montserrat', sans-serif;
         font-weight: bolder;
@@ -445,7 +449,7 @@ marquee{
         background-color: #0d6efd;
     }
     
-    .container .about h2{
+    .about h2{
         color: white;
         margin: auto;
         margin-top: 20px;
@@ -458,7 +462,7 @@ marquee{
         text-transform: uppercase;
     }
     
-    .container .about h2 ::before{
+    .about h2 ::before{
         content: attr(data-text);
         position: absolute;
         top: 0;
@@ -613,3 +617,4 @@ marquee{
 @media only screen and (min-width: 46.25em) and (max-width: 63.9375em){
     
 }
+
