--- a/style.css
+++ b/style.css
@@ -8,23 +8,23 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: linear-gradient(to bottom, #FFFF00, #FF0000)
+    background-image: linear-gradient(to bottom, #FFA1CF, #FFD6EC)
 }
 
 
 
 marquee{
-    background-color: #45f3ff;
+    background-color: #FF74B1;
     margin-top: -10px;
     padding: 20px 0;
     font-weight: bolder;
     font-size: 25px;
-    color: #fd0c71;
+    color: #FFFFFF;
 }
 
 .container{
     width: 100%;
-    background-color: #FFFF00;
+    background-color: #45f3ff;
     padding: 0;
 }
 
@@ -97,7 +97,7 @@ marquee{
     text-align: center;
     font-size: 50px;
     color: white;
-    margin: 100px 580px 0px 580px; 
+    margin: 100px 730px 0px 730px; 
     padding: 10px 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
@@ -177,11 +177,14 @@ marquee{
     color: red;
 }
 
+.photo-text{
+    margin-top: 30px;
+}
 .photo-text h1{
     text-align: center;
     font-size: 50px;
     color: white;
-    margin: 100px 630px 70px 630px; 
+    margin: 100px 730px 70px 730px; 
     padding: 10px 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: bolder;
@@ -226,7 +229,7 @@ marquee{
 }
 
 .the-end{
-    background-color: yellow;
+    background-color: #45f3ff;
     margin-top: 20px;
     text-align: center;
     margin-bottom: -10px;
@@ -292,6 +295,21 @@ marquee{
 .love-three{
     display: flex;
 }
+
+.love-for{
+    margin-top: 30px;
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.love-five{
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.love-six{
+    display: flex;
+}
 .box{
     position: relative;
     width: 380px;
@@ -343,7 +361,7 @@ marquee{
 .form1{
     position: absolute;
     z-index: 10;
-    background-image: url(img2.png);
+    background-image: url(img1.png);
     background-size: 420px;
     inset: 5px;
     border-radius: 8px;
@@ -355,7 +373,7 @@ marquee{
 .form2{
     position: absolute;
     z-index: 10;
-    background-image: url(img1.png);
+    background-image: url(img2.png);
     background-size: 420px;
     inset: 5px;
     border-radius: 8px;
@@ -441,6 +459,115 @@ marquee{
     position: absolute;
     z-index: 10;
     background-image: url(img9.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form10{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img10.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form11{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img11.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form12{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img12.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form13{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img13.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form14{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img14.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form15{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img15.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.form16{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img16.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form17{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img17.png);
+    background-size: 420px;
+    inset: 5px;
+    border-radius: 8px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form18{
+    position: absolute;
+    z-index: 10;
+    background-image: url(img18.png);
     background-size: 420px;
     inset: 5px;
     border-radius: 8px;
@@ -655,11 +782,7 @@ marquee{
     }
 
 
-    .love-one{
-        display: inline;
-       
-    }
-
+    
     .box{
         width: 350px;
         margin-bottom: 20px;
@@ -668,7 +791,11 @@ marquee{
     .form1{
         text-align: center;
     }
-
+    
+    .love-one{
+        display: inline;
+       
+    }
 
     .love-two{
         display: inline;
@@ -677,6 +804,19 @@ marquee{
     .love-three{
         display: inline;
     }
+
+    .love-for{
+        display: inline;
+    }
+
+    .love-five{
+        display: inline;
+    }
+
+    .love-six{
+        display: inline;
+    }
+
 
     .contact-text h1{
         text-align: center;
@@ -924,6 +1064,18 @@ marquee{
         display: inline;
     }
 
+    .love-for{
+        display: inline;
+    }
+
+    .love-five{
+        display: inline;
+    }
+
+    .love-six{
+        display: inline;
+    }
+
 
     .contact-text h1{
         text-align: center;
@@ -958,4 +1110,274 @@ marquee{
         font-size: 20px;
     }
 }
+
+
+
+
+
+
+@media only screen and (min-width: 63.9375em){
+
+    *{
+        margin: 0;
+        padding: 0;
+    }
+
+    .script{
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navbar h1{
+        margin: 40px 60px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 50px;
+        width: 100%;
+    }
+    
+    
+    .bootrap{
+        display: inline;   
+        margin-left: 0;
+        margin-top: 20px;
+        margin: auto;
+    }
+
+    .btn-primary{
+        margin-right: 0;
+        width: 200px;
+        margin-right: 50px;
+        padding: 20px 0;
+    }
+
+    .btn-danger{
+        margin-right: 0;
+        width: 200px;
+        margin-right: 50px;
+        padding: 20px 0;
+    }
+    .btn-success{
+        margin-right: 0;
+        width: 200px;
+        margin-left: 15px;
+        padding: 20px 0;
+    }
+
+    .btn-warning{
+       display: none; 
+    }
+
+    .contact-content{
+        display: none;
+    }
+
+
+    .about h1{
+        color: white;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bolder;
+        font-size: 30px;
+        margin: auto;
+        margin-top: 20px;
+        padding: 20px 0;
+        width: 250px;
+        text-align: center;
+        border-radius: 20px;
+        background-color: #0d6efd;
+    }
+    
+    .about h2{
+        color: rgb(255, 0, 136);
+        margin: 40px 40px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bolder;
+        font-size: 40px;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    
+    .about h2 ::before{
+        content: attr(data-text);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 100%;
+        color: #f00696;
+        animation: animate 6s linear infinite;
+    }
+
+
+    /* .icon{
+        display: inline;
+    } */
+
+    .icon-text h1{
+        text-align: center;
+        color: white;
+        margin: auto; 
+        margin-top: 40px;
+        padding: 20px 0;
+        width: 250px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bolder;
+        font-size: 30px;
+        text-align: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: red;
+    
+    }
+
+    
+    
+    .icon .facebook{
+        margin: auto;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+
+    .facebook .fa-square-facebook{
+        font-size: 200px;
+    }
+
+    .icon .instagram{
+        margin: auto;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .instagram .fa-instagram{
+        font-size: 200px;
+    }
+
+    .icon .twitter{
+        margin: auto;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .icon .twitter h2{
+        margin-left: 10px;
+    }
+
+    .twitter .fa-twitter{
+        font-size: 200px;
+    }
+
+    .icon .youtube{
+        margin: auto;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .youtube .fa-youtube{
+        font-size: 200px;
+        margin-bottom: 50px;
+    }
+
+    .fa-square-facebook{
+        font-size: 50px;
+        color: blue;
+    }
+
+    .fa-instagram{
+        font-size: 50px;
+    }
+
+    .fa-youtube{
+        font-size: 50px;
+        color: red;
+    }
+
+    
+
+    .photo-text h1{
+        text-align: center;
+        font-size: 30px;
+        color: white;
+        margin: auto; 
+        margin-bottom: 20px;
+        padding: 10px 0;
+        width: 200px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bolder;
+        text-align: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #157347;
+    }
+
+
+    /* .love-one{
+        display: inline;
+       
+    }
+
+    .box{
+        width: 350px;
+        margin-bottom: 20px;
+        
+    }
+    .form1{
+        text-align: center;
+    }
+
+
+    .love-two{
+        display: inline;
+    }
+
+    .love-for{
+        display: inline;
+    }
+
+    .love-five{
+        display: inline;
+    }
+
+    .love-six{
+        display: inline;
+    } */
+
+
+    .contact-text h1{
+        text-align: center;
+        font-size: 30px;
+        color: white;
+        margin: auto; 
+        margin-bottom: 20px;
+        padding: 10px 0;
+        width: 200px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bolder;
+        text-align: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #157347;
+    }
+
+    /* .love-three{
+        display: inline;
+    } */
+
+    .contact-content h2{
+        display: none;
+        margin: 0;
+    }    
+
+    .the-end{
+        width: 100%;
+    }
+    .the-end h4{
+        width: 100%;
+        font-size: 20px;
+    }
+}
+
+
+
 
